# personallm

./: load_csv.py  pyproject.toml
commands/: contextual_embeddings.sh  depanx_extraction.sh  preprocess.sh  training.py
notebooks/: analysis.ipynb
results/: genText_GADtot_roberta_la_L23_ridge1000.pkl  genText_PHQtot_roberta_la_L23_ridge1000.pkl  genText_PSStot_roberta_la_L23_ridge1000.pkl  genText_gad7_roberta_la_L23_ridge1000.pkl  genText_phq9_roberta_la_L23_ridge1000.pkl  genText_pss10_roberta_la_L23_ridge1000.pkl
src/: evaluate.py  generate.py  prepare_phq_outcomes.py  prompt.py
src/prompts/: prompt_bkp.py  vignette.py
