[project]
name = "personallm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.50",
    "tenacity>=9.0",
    "transformers>=4.44",
    "torch>=2.3",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "sqlalchemy>=2.0.49",
    "mysqlclient>=2.2.8",
    "nltk>=3.9.4",
    "setuptools>=81.0.0",
    "pandas<=2.2",
    "numpy>=1.26.4",
    "plotnine>=0.15.3",
]
