[project]
name = "personallm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.50",
    "tenacity>=9.0",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "sqlalchemy>=2.0.49",
    "mysqlclient>=2.2.8",
    "nltk>=3.9.4",
    "setuptools>=81.0.0",
    "pandas<=2.2",
    "numpy>=1.26.4",
    "plotnine>=0.15.3",
    "pyreadr>=0.5.6",
    "image>=1.5.33",
    "langid>=1.1.4",
    "patsy>=0.2.1",
    "python-dateutil>=2.5.0",
    "rpy2>=3.6.7",
    "scikit-learn>=1.8.0",
    "scipy>=0.13.3",
    "statsmodels>=0.5.0",
    "wordcloud>=1.1.3",
    "torch==2.2.2",
    "transformers==4.44.2",
    "huggingface-hub==0.34.5",
    "simplejson>=4.1.1",
]
